feat: scalable sync (#14)
* new data model

* done with init.ts, to test

* add db migration

* lock in changes

* currently at 30s per run, let's see if smaller batch is faster

* fix sql

* trying recursive manager pattern

* try to get init manager + embedding worker to work

* kinda working, tuning it up to see if it can go faster

* 5 is faster

* refactor complete, to test

* add error handling

* finish, time to test

* redeployed, various bug fixes

* more tweaks in response to errors observed

* fix: cron workflow requires passing in empty object

* fix: init worker terminates upon completion

* fix: reset embedding status after update

* fix: retry mechanism

* update README + fix bug

* feat: optimize repo initialization and issue sync processes

* add migrations

* modify db migrations for backward compat on prod

* add todos

* rename everything

* extracting constants part 1

* extract parameterse and ensure concurrency correctness

* fix CI issues

* touchup

* fix worker script to deploy to prod

* readme

* call workflow with legible id

* still trying to fix...

* maybe it's working

* more aggressive numIssues reduction

* parameterise

* fix: add pagination to avoid death loop

* include endcursor in db

* feat(github): implement code block truncation in issue and comment bodies

* truncate codeblock when creating embedding too

* more aggressive truncation

* slight API changes

* raise reponse size limit?

---------

Co-authored-by: zx <67887489+tan-zx@users.noreply.github.com>

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -15,8 +15,11 @@
     ],
     "noUncheckedIndexedAccess": true,
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+      "@/infra/*": ["../../infra/*"]
+    },
+    "rootDir": "../../"
   },
+  "include": ["./src/**/*", "../../infra/types.ts"],
   "exclude": ["dist", "node_modules"]
 }
