--- a/packages/wrangler/src/workflows/sync/repo-init/wrangler.toml
+++ b/packages/wrangler/src/workflows/sync/repo-init/wrangler.toml
@@ -1,5 +1,5 @@
 name = "semhub-sync-repo-init-dev"
-main = "./index.ts"
+main = "./init.workflow.ts"
 compatibility_date = "2024-10-22"       # keep in sync with @cloudflare/workers-types
 compatibility_flags = ["nodejs_compat"]
 
@@ -7,24 +7,24 @@ compatibility_flags = ["nodejs_compat"]
 enabled = true
 head_sampling_rate = 1
 
-[[services]]
-binding = "SYNC_REPO_EMBEDDING_WORKFLOW"
-service = "semhub-sync-repo-embedding-dev"
-
 [[workflows]]
 name = "semhub-sync-repo-init-workflow-dev"
-binding = "SYNC_REPO_INIT_WORKFLOW"
-class_name = "SyncWorkflow"
+binding = "REPO_INIT_WORKFLOW"
+class_name = "RepoInitWorkflow"
+
+[[services]]
+binding = "SYNC_EMBEDDING_WORKFLOW"
+service = "semhub-sync-embedding-dev"
 
 # Production environment
 [env.prod]
 name = "semhub-sync-repo-init-prod"
 
-[[env.prod.services]]
-binding = "SYNC_REPO_EMBEDDING_WORKFLOW"
-service = "semhub-sync-repo-embedding-prod"
-
 [[env.prod.workflows]]
 name = "semhub-sync-repo-init-workflow-prod"
-binding = "SYNC_REPO_INIT_WORKFLOW"
-class_name = "SyncWorkflow"
+binding = "REPO_INIT_WORKFLOW"
+class_name = "RepoInitWorkflow"
+
+[[env.prod.services]]
+binding = "SYNC_EMBEDDING_WORKFLOW"
+service = "semhub-sync-embedding-prod"
