--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
     "octokit": "^4.0.2",
     "openai": "^4.69.0",
     "postgres": "^3.4.4",
+    "resend": "^4.0.1",
     "ulidx": "^2.4.1",
     "zod": "^3.23.8"
   },
