--- a/packages/wrangler/src/workflows/sync/embedding/wrangler.toml
+++ b/packages/wrangler/src/workflows/sync/embedding/wrangler.toml
@@ -2,6 +2,7 @@ name = "semhub-sync-embedding-dev"
 main = "./embedding.workflow.ts"
 compatibility_date = "2024-10-22"       # keep in sync with @cloudflare/workers-types
 compatibility_flags = ["nodejs_compat"]
+vars = { ENVIRONMENT = "dev" }
 
 [observability]
 enabled = true
@@ -15,6 +16,7 @@ class_name = "EmbeddingWorkflow"
 # Production environment
 [env.prod]
 name = "semhub-sync-embedding-prod"
+vars = { ENVIRONMENT = "prod" }
 
 [[env.prod.workflows]]
 name = "semhub-sync-embedding-workflow-prod"
