--- a/packages/wrangler/src/workflows/sync/issue/wrangler.toml
+++ b/packages/wrangler/src/workflows/sync/issue/wrangler.toml
@@ -2,6 +2,7 @@ name = "semhub-sync-issue-dev"
 main = "./issue.workflow.ts"
 compatibility_date = "2024-10-22"       # keep in sync with @cloudflare/workers-types
 compatibility_flags = ["nodejs_compat"]
+vars = { ENVIRONMENT = "dev" }
 
 [observability]
 enabled = true
@@ -15,6 +16,7 @@ class_name = "IssueWorkflow"
 # Production environment
 [env.prod]
 name = "semhub-sync-issue-prod"
+vars = { ENVIRONMENT = "prod" }
 
 [[env.prod.workflows]]
 name = "semhub-sync-issue-workflow-prod"
