--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,7 @@
     "postgres": "^3.4.4",
     "resend": "^4.0.1",
     "ulidx": "^2.4.1",
-    "zod": "^3.23.8"
+    "zod": "*"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
