--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,8 +8,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@semhub/core": "*",
-    "@semhub/workers": "*",
+    "@semhub/core": "workspace:*",
+    "@semhub/workers": "workspace:*",
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.6",
     "@tanstack/react-router": "^1.63.5",
