setup authenticator wip

--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -9,7 +9,7 @@
     "@semhub/core": "workspace:*",
     "@semhub/wrangler": "workspace:*",
     "@hono/zod-validator": "^0.4.1",
-    "@openauthjs/openauth": "0.2.3"
+    "@openauthjs/openauth": "*"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0"
