add client id and client secret

--- a/.secrets.example
+++ b/.secrets.example
@@ -2,3 +2,6 @@ DATABASE_URL=
 GITHUB_PERSONAL_ACCESS_TOKEN=
 OPENAI_API_KEY=
 RESEND_API_KEY=
+
+SEMHUB_GITHUB_APP_CLIENT_ID=
+SEMHUB_GITHUB_APP_CLIENT_SECRET=
