--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,7 @@
     "openai": "^4.69.0",
     "postgres": "^3.4.4",
     "resend": "^4.0.1",
+    "tldts": "^6.1.68",
     "ulidx": "^2.4.1",
     "zod": "*"
   },
