--- a/.secrets.example
+++ b/.secrets.example
@@ -1,3 +1,6 @@
 GITHUB_PERSONAL_ACCESS_TOKEN=
 OPENAI_API_KEY=
 RESEND_API_KEY=
+SEMHUB_GITHUB_APP_CLIENT_ID=
+SEMHUB_GITHUB_APP_CLIENT_SECRET=
+BETTER_AUTH_SECRET=
