--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "better-auth": "^1.0.22",
     "dedent": "^1.5.3",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
