wip dot dot dot

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -20,6 +20,6 @@
     },
     "rootDir": "../../"
   },
-  "include": ["./src/**/*", "../../infra/types.ts"],
+  "include": ["./src/**/*", "../../infra/types.ts", "src/auth.ts"],
   "exclude": ["dist", "node_modules"]
 }
