--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.0.22",
     "@cloudflare/workers-types": "^4.20241022.0",
     "@tsconfig/node20": "20.1.4",
     "drizzle-kit": "^0.24.2",
