--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,6 +8,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@semhub/core": "workspace:*",
     "@semhub/workers": "workspace:*",
@@ -28,7 +29,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "simple-icons": "^13.21.0",
-    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7"
