--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -12,10 +12,12 @@
     "deploy:prod": "bun scripts/worker.ts deploy --prod",
     "delete": "bun scripts/worker.ts delete",
     "delete:prod": "bun scripts/worker.ts delete --prod",
-    "deploy:workflows": "bun run deploy workflows/sync/embedding && bun run deploy workflows/sync/issue && bun run deploy workflows/sync/repo-init",
-    "deploy:workflows:prod": "bun run deploy workflows/sync/embedding --prod && bun run deploy workflows/sync/issue --prod && bun run deploy workflows/sync/repo-init --prod",
-    "deploy:all": "bun run deploy rate-limiter && bun run deploy workflows/sync/embedding && bun run deploy workflows/sync/issue && bun run deploy workflows/sync/repo-init",
-    "deploy:all:prod": "bun run deploy rate-limiter --prod && bun run deploy workflows/sync/embedding --prod && bun run deploy workflows/sync/issue --prod && bun run deploy workflows/sync/repo-init --prod"
+    "deploy:workflows-sync": "bun run deploy workflows/sync/embedding && bun run deploy workflows/sync/issue && bun run deploy workflows/sync/repo-init",
+    "deploy:workflows-sync:prod": "bun run deploy workflows/sync/embedding --prod && bun run deploy workflows/sync/issue --prod && bun run deploy workflows/sync/repo-init --prod",
+    "deploy:workflows-background": "bun run deploy workflows/background",
+    "deploy:workflows-background:prod": "bun run deploy workflows/background --prod",
+    "deploy:all": "bun run deploy rate-limiter && bun run deploy:workflows-sync && bun run deploy:workflows-background",
+    "deploy:all:prod": "bun run deploy rate-limiter --prod && bun run deploy:workflows-sync --prod && bun run deploy:workflows-background --prod"
   },
   "dependencies": {
     "@semhub/core": "workspace:*",
