--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -8,16 +8,11 @@
     "test": "vitest run",
     "test:watch": "vitest watch",
     "dev": "bun scripts/worker.ts dev",
-    "deploy": "bun scripts/worker.ts deploy",
-    "deploy:prod": "bun scripts/worker.ts deploy --prod",
+    "deploy": "bun scripts/deploy.ts",
+    "deploy:all": "bun scripts/deploy.ts all --load-env",
+    "deploy:all:prod": "bun scripts/deploy.ts all --prod --load-env",
     "delete": "bun scripts/worker.ts delete",
-    "delete:prod": "bun scripts/worker.ts delete --prod",
-    "deploy:workflows-sync": "bun run deploy workflows/sync/embedding && bun run deploy workflows/sync/issue && bun run deploy workflows/sync/repo-init",
-    "deploy:workflows-sync:prod": "bun run deploy workflows/sync/embedding --prod && bun run deploy workflows/sync/issue --prod && bun run deploy workflows/sync/repo-init --prod",
-    "deploy:workflows-background": "bun run deploy workflows/background",
-    "deploy:workflows-background:prod": "bun run deploy workflows/background --prod",
-    "deploy:all": "bun run deploy rate-limiter && bun run deploy:workflows-sync && bun run deploy:workflows-background",
-    "deploy:all:prod": "bun run deploy rate-limiter --prod && bun run deploy:workflows-sync:prod && bun run deploy:workflows-background:prod"
+    "delete:prod": "bun scripts/worker.ts delete --prod"
   },
   "dependencies": {
     "@semhub/core": "workspace:*",
