add logger + rename to app.ts

--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -9,7 +9,8 @@
     "@semhub/core": "workspace:*",
     "@semhub/wrangler": "workspace:*",
     "@hono/zod-validator": "^0.4.1",
-    "@openauthjs/openauth": "*"
+    "@openauthjs/openauth": "*",
+    "hono": "^4.6.5"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0"
