--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "dev": "sst dev",
+    "sso": "aws sso login --profile semhub",
     "typecheck": "bun --filter=@semhub/core typecheck && bun --filter=@semhub/wrangler typecheck && bun --filter=@semhub/workers typecheck && bun --filter=@semhub/scripts typecheck && bun --filter=@semhub/web typecheck",
     "format:write": "prettier . --write",
     "format:check": "prettier . --check || (echo '⚠️  Warning: Formatting issues found' && exit 0)",
@@ -38,6 +39,6 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
-    "sst": "^3.4.54"
+    "sst": "3.5.7"
   }
 }
