--- a/packages/wrangler/src/workflows/sync/repo-init/wrangler.toml
+++ b/packages/wrangler/src/workflows/sync/repo-init/wrangler.toml
@@ -17,6 +17,20 @@ class_name = "RepoInitWorkflow"
 binding = "SYNC_EMBEDDING_WORKFLOW"
 service = "semhub-sync-embedding-dev"
 
+# UAT environment
+[env.uat]
+name = "semhub-sync-repo-init-uat"
+vars = { ENVIRONMENT = "uat" }
+
+[[env.uat.workflows]]
+name = "semhub-sync-repo-init-workflow-uat"
+binding = "REPO_INIT_WORKFLOW"
+class_name = "RepoInitWorkflow"
+
+[[env.uat.services]]
+binding = "SYNC_EMBEDDING_WORKFLOW"
+service = "semhub-sync-embedding-uat"
+
 # Production environment
 [env.prod]
 name = "semhub-sync-repo-init-prod"
