--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
     "db:generate": "sst shell -- drizzle-kit generate",
     "db:migrate": "sst shell -- drizzle-kit migrate",
     "db:migrate:prod": "sst shell --stage prod -- drizzle-kit migrate",
+    "db:migrate:uat": "sst shell --stage uat -- drizzle-kit migrate",
     "db:push": "sst shell -- drizzle-kit push"
   },
   "exports": {
