--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
+    "generate:go": "bun src/generate-go.ts",
     "shell": "sst shell -- bun",
     "shell:prod": "sst shell --stage prod -- bun"
   }
