--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc --noEmit",
     "generate:go": "bun src/generate-go.ts",
     "shell": "sst shell -- bun",
+    "shell:uat": "sst shell --stage uat -- bun",
     "shell:prod": "sst shell --stage prod -- bun"
   }
 }
