--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@semhub/core": "workspace:*",
     "@semhub/workers": "workspace:*",
+    "@sentry/react": "^8.54.0",
+    "@sentry/vite-plugin": "^3.1.2",
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.6",
     "@tanstack/react-router": "^1.63.5",
