--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.4.47",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-powerglitch": "^1.1.0",
     "simple-icons": "^13.21.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
